Browser: Attemping to fix the browser and console box CSS so that it doesn't cut off the status bar. Fixed in Firefox 2, but Firefox 3 seems to do something odd with EditArea's iframe. You can just set the height from 'auto' to 100% but it seems to somehow make it larger than the area avalible. (Very odd)

--- a/www/media/browser/browser.css
+++ b/www/media/browser/browser.css
@@ -96,6 +96,6 @@
     /* top == #topbar.height + #topbar.padding * 2 */
     top: 5.6em;
     /* Space for the mimimised console */
-    bottom: 2em;
+    bottom: 3.5em;
 }
 
